# gazebo_arm

./: Dockerfile  entrypoint.sh
soft_ws/src/panda_gz_moveit/: CMakeLists.txt  package.xml
soft_ws/src/panda_gz_moveit/launch/: panda_gz_launch.py
soft_ws/src/panda_gz_moveit/scripts/: color_cube_detector.py  dynamic_pick_kalman.py  pick_place_controller.py
soft_ws/src/panda_gz_moveit/urdf/: panda_arm.urdf  panda_gz.urdf.xacro
soft_ws/src/panda_gz_moveit/worlds/: panda_grasp.sdf
soft_ws/src/panda_moveit_config/: .setup_assistant  package.xml
soft_ws/src/panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
